fix: tabs do not need z-index

--- a/components/04-navigation/tab/tab.pcss
+++ b/components/04-navigation/tab/tab.pcss
@@ -18,7 +18,6 @@
 /*** Tab Styles ***/
 .tab {
   font-size: var(--skeleton-size-text-tab);
-  /* line-height: 1; */
   display: inline-flex;
   padding: 0.5rem 0.75rem;
   border: var(--skeleton-width-border-tab) solid var(--skeleton-color-border-tab);
@@ -33,6 +32,6 @@
     color: var(--skeleton-color-fg-tab-active);
     border: var(--skeleton-width-border-tab-active) solid var(--skeleton-color-border-tab-active);
     border-block-end: var(--skeleton-width-border-tab-active) solid var(--skeleton-color-bg-tab-active);
-    z-index: 1;
+    margin-inline: 1px;
   }
 }
